--- a/playbackdialog.ui
+++ b/playbackdialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>577</width>
-    <height>103</height>
+    <height>130</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -301,7 +301,7 @@
            </layout>
           </widget>
           <widget class="QWidget" name="page_2">
-           <layout class="QHBoxLayout" name="horizontalLayout_4">
+           <layout class="QGridLayout" name="gridLayout">
             <property name="leftMargin">
              <number>5</number>
             </property>
@@ -314,7 +314,7 @@
             <property name="bottomMargin">
              <number>2</number>
             </property>
-            <item>
+            <item row="0" column="0">
              <widget class="QToolButton" name="backButton">
               <property name="text">
                <string>...</string>
@@ -331,38 +331,14 @@
               </property>
              </widget>
             </item>
-            <item>
+            <item row="0" column="1">
              <widget class="QLabel" name="label_2">
               <property name="text">
                <string>Rec Folder</string>
               </property>
              </widget>
             </item>
-            <item>
-             <widget class="QLineEdit" name="RecFolder">
-              <property name="text">
-               <string/>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QToolButton" name="toolButton">
-              <property name="text">
-               <string>...</string>
-              </property>
-              <property name="icon">
-               <iconset resource="icons.qrc">
-                <normaloff>:/new/png/icons/gtk-open.png</normaloff>:/new/png/icons/gtk-open.png</iconset>
-              </property>
-              <property name="iconSize">
-               <size>
-                <width>32</width>
-                <height>32</height>
-               </size>
-              </property>
-             </widget>
-            </item>
-            <item>
+            <item row="0" column="4">
              <widget class="QComboBox" name="codecBox">
               <property name="minimumSize">
                <size>
@@ -413,6 +389,47 @@
                 <string>JPG</string>
                </property>
               </item>
+             </widget>
+            </item>
+            <item row="0" column="2">
+             <widget class="QLineEdit" name="RecFolder">
+              <property name="text">
+               <string/>
+              </property>
+             </widget>
+            </item>
+            <item row="0" column="3">
+             <widget class="QToolButton" name="toolButton">
+              <property name="text">
+               <string>...</string>
+              </property>
+              <property name="icon">
+               <iconset resource="icons.qrc">
+                <normaloff>:/new/png/icons/gtk-open.png</normaloff>:/new/png/icons/gtk-open.png</iconset>
+              </property>
+              <property name="iconSize">
+               <size>
+                <width>32</width>
+                <height>32</height>
+               </size>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="1">
+             <widget class="QLabel" name="label_3">
+              <property name="text">
+               <string>Rec Skipping</string>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="2">
+             <widget class="QLineEdit" name="recSkippingEdit">
+              <property name="text">
+               <string>0</string>
+              </property>
+              <property name="alignment">
+               <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+              </property>
              </widget>
             </item>
            </layout>
